--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -7,10 +7,11 @@ on:
   schedule:
     # every 1st day of the month at 10:30
     - cron: '30 10 1 * *'
-
+  workflow_dispatch:
+  
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
 
     steps:
       - uses: actions/checkout@v3
